# stellar-wing-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  windows-release.yml
docs/: PORTING-SPEC.md
scripts/: package_macos_app.sh
src/: achievements.rs  art.rs  audio.rs  bg.rs  chapter.rs  collision.rs  combat.rs  config.rs  fx.rs  hud.rs  lang.rs  main.rs  save.rs  scene.rs  ship.rs  spawn.rs  talents.rs  upgrade.rs  world.rs
src/audio/: bgm.rs  mod.rs  sfx.rs  synth.rs
src/entity/: bullet.rs  enemy.rs  mod.rs  pickup.rs  player.rs
src/weapon/: chain.rs  drone.rs  laser.rs  main_gun.rs  missile.rs  mod.rs  reflector.rs  rift.rs  wave.rs
