[package]
name = "stellar-wing"
version = "0.2.0"
edition = "2021"
description = "Stellar Wing — a Rust roguelike vertical shoot-em-up"
license = "MIT"

[dependencies]
macroquad   = { version = "0.4", features = ["audio"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
directories = "5"
rand        = "0.8"
glam        = "0.27"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
